Fix padding creating a horizontal scrollbar in parent div

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 10px;
   position: relative;
   background-position: center;
   background-size: cover;
